--- a/src/patientRecordsPane/PatientRecordsStyle.css
+++ b/src/patientRecordsPane/PatientRecordsStyle.css
@@ -42,3 +42,24 @@
     -fx-font-family: "Ebrima";
     -fx-font-color: #00000080;
 }
+
+.change_graph_button {
+	-fx-background-radius: 40;
+	-fx-background-color: white;
+	-fx-font-weight: normal;
+    -fx-font-size: 14;
+    -fx-text-fill: #00000080;
+	-fx-border-width: 2;
+    -fx-border-radius: 40;
+	-fx-border-color: linear-gradient(to bottom left, #00A9CC, #020024);
+}
+
+.change_graph_button:hover {
+	-fx-background-color: #d8d8d8;
+	-fx-font-weight: normal;
+    -fx-text-fill: #00000080;
+	-fx-border-width: 2;
+	-fx-font-size: 14;
+    -fx-border-radius: 40;
+	-fx-border-color: linear-gradient(to bottom left, #00A9CC, #020024);
+}
