--- a/src/parametersRecordPane/ParametersRecordLayout.fxml
+++ b/src/parametersRecordPane/ParametersRecordLayout.fxml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXTreeTableView?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TreeTableView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -52,7 +54,6 @@
             <Font size="16.0" />
          </font>
       </JFXButton>
-      <Pane fx:id="pastPane" layoutX="543.0" layoutY="89.0" prefHeight="243.0" prefWidth="411.0" />
       <Label alignment="CENTER" layoutX="594.0" layoutY="347.0" prefHeight="25.0" prefWidth="321.0" text="Last recorded values (timewise)" textAlignment="CENTER" textFill="#00000067" wrapText="true">
          <font>
             <Font name="Ebrima" size="18.0" />
@@ -69,5 +70,10 @@
           <MenuItem mnemonicParsing="false" text="EMG channel" />
         </items>
       </MenuButton>
+      <JFXTreeTableView fx:id="pastValuesTreeView" layoutX="561.0" layoutY="89.0" prefHeight="230.0" prefWidth="362.0" styleClass="tree_view">
+         <columnResizePolicy>
+            <TreeTableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+      </JFXTreeTableView>
    </children>
 </Pane>
