--- a/src/patientRecordsPane/PatientRecordsLayout.fxml
+++ b/src/patientRecordsPane/PatientRecordsLayout.fxml
@@ -78,8 +78,8 @@
 			</font>
 		</Label>
 		<Separator layoutX="44.0" layoutY="224.0" prefHeight="0.0" prefWidth="878.0" />
-		<Label layoutX="661.0" layoutY="97.0" styleClass="label_text" text="Select month of the recordings" textFill="#0000007e" />
-		<DatePicker fx:id="datePicker" layoutX="697.0" layoutY="139.0" />
+		<Label layoutX="657.0" layoutY="97.0" styleClass="label_text" text="Select the day of the recordings" textFill="#0000007e" />
+		<DatePicker fx:id="datePicker" layoutX="669.0" layoutY="136.0" prefHeight="32.0" prefWidth="229.0" />
 		<StackPane fx:id="chartPane" alignment="CENTER" layoutX="68.0" layoutY="238.0" prefHeight="400.0" prefWidth="830.0">
          <children>
             <LineChart fx:id="measuresChart" animated="false" legendVisible="false">
