--- a/src/patientRecordsPane/PatientRecordsLayout.fxml
+++ b/src/patientRecordsPane/PatientRecordsLayout.fxml
@@ -62,7 +62,7 @@
 				<Font name="Ebrima" size="18.0" />
 			</font>
 		</Label>
-		<Label layoutX="365.0" layoutY="98.0" text="Patient Health Data" textFill="#00000080">
+		<Label layoutX="365.0" layoutY="98.0" styleClass="label_text_bold" text="Patient Health Data" textFill="#00000080">
 			<font>
 				<Font name="Ebrima Bold" size="18.0" />
 			</font>
@@ -78,8 +78,8 @@
 			</font>
 		</Label>
 		<Separator layoutX="44.0" layoutY="224.0" prefHeight="0.0" prefWidth="878.0" />
-		<Label layoutX="657.0" layoutY="97.0" styleClass="label_text" text="Select the day of the recordings" textFill="#0000007e" />
-		<DatePicker fx:id="datePicker" layoutX="669.0" layoutY="136.0" prefHeight="32.0" prefWidth="229.0" />
+		<Label alignment="CENTER" layoutX="657.0" layoutY="97.0" prefHeight="23.0" prefWidth="255.0" styleClass="label_text_bold" text="Select a day" textFill="#0000007e" />
+		<DatePicker fx:id="datePicker" editable="false" layoutX="670.0" layoutY="165.0" prefHeight="32.0" prefWidth="229.0" promptText="Select a day" styleClass="date-chooser" />
 		<StackPane fx:id="chartPane" alignment="CENTER" layoutX="68.0" layoutY="238.0" prefHeight="400.0" prefWidth="830.0">
          <children>
             <LineChart fx:id="measuresChart" animated="false" legendVisible="false">
@@ -94,5 +94,10 @@
          </children>
 		</StackPane>
       <JFXButton fx:id="changeGraph" layoutX="382.0" layoutY="651.0" onMouseClicked="#changeChart" prefHeight="34.0" prefWidth="202.0" styleClass="change_graph_button" text="Button text" />
+      <Label alignment="CENTER" layoutX="657.0" layoutY="125.0" prefHeight="23.0" prefWidth="255.0" text="To display the patient's records" textFill="#0000007e">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
 	</children>
 </Pane>
