--- a/src/patientAccountPane/PatientAccountLayout.fxml
+++ b/src/patientAccountPane/PatientAccountLayout.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
-
 <?import com.jfoenix.controls.JFXPasswordField?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Label?>
@@ -11,14 +10,14 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="965.0" styleClass="white_color" stylesheets="@DoctorAccountStyle.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="doctorAccountPane.DoctorAccountController">
+<Pane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="965.0" styleClass="white_color" stylesheets="@PatientsAccountStyle.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="patientAccountPane.PatientAccountController">
    <children>
-      <Label layoutX="106.0" layoutY="25.0" prefHeight="32.0" prefWidth="143.0" text="Settings" textFill="#00000080">
+      <Label layoutX="106.0" layoutY="25.0" prefHeight="32.0" prefWidth="143.0" text="Your account" textFill="#00000080">
          <font>
             <Font name="Ebrima" size="22.0" />
          </font>
       </Label>
-      <JFXButton layoutX="923.0" layoutY="13.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#closeApp" prefHeight="28.0" prefWidth="28.0" styleClass="window_button" stylesheets="@DoctorAccountStyle.css" text="X">
+      <JFXButton layoutX="923.0" layoutY="13.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#closeApp" prefHeight="28.0" prefWidth="28.0" styleClass="window_button" text="X">
          <font>
             <Font size="14.0" />
          </font>
@@ -38,7 +37,7 @@
             <Font name="Ebrima" size="18.0" />
          </font>
       </Label>
-      <Label fx:id="userDoctorIdLabel" layoutX="604.0" layoutY="496.0" styleClass="label_text2" text="Patient ID: not found" textFill="#00000080">
+      <Label fx:id="userIDLabel" layoutX="604.0" layoutY="496.0" styleClass="label_text2" text="Patient ID: not found" textFill="#00000080">
          <font>
             <Font name="Ebrima" size="18.0" />
          </font>
