--- a/src/patientAccountPane/PatientsAccountStyle.css
+++ b/src/patientAccountPane/PatientsAccountStyle.css
@@ -24,12 +24,30 @@
 	-fx-font-weight: normal;
     -fx-text-fill: #00000080;
 	-fx-border-width: 2;
-	-fx-font-size: 11;
+	 -fx-font-size: 11;
     -fx-border-radius: 40;
 	-fx-border-color: linear-gradient(to bottom left, #00A9CC, #020024);
 }
 
-.add_button {
+.label_text {
+	-fx-font-weight: normal;
+    -fx-font-size: 16;
+    -fx-font-family: "Ebrima";
+}
+
+.label_text_bold {
+	-fx-font-weight: bold;
+    -fx-font-size: 16;
+    -fx-font-family: "Ebrima";
+}
+
+.label_text2 {
+	-fx-font-weight: normal;
+    -fx-font-size: 18;
+    -fx-font-family: "Ebrima";
+}
+
+.change_button {
 	-fx-background-radius: 40;
 	-fx-background-color: white;
 	-fx-font-weight: normal;
@@ -40,50 +58,12 @@
 	-fx-border-color: linear-gradient(to bottom left, #00A9CC, #020024);
 }
 
-.add_button:hover {
+.change_button:hover {
 	-fx-background-color: #d8d8d8;
 	-fx-font-weight: normal;
     -fx-text-fill: #00000080;
 	-fx-border-width: 2;
 	-fx-font-size: 14;
-    -fx-border-radius: 40;
-	-fx-border-color: linear-gradient(to bottom left, #00A9CC, #020024);
-}
-
-.tree_view {
-	-fx-border-color: white;
-	-fx-border-width: 2;
-	-fx-background-color: white;
-    -fx-font-size: 14;
-    -fx-text-fill: #00000080;
-    -fx-border-radius: 20;
-}
-
-.tree_view .table-column {
-	-fx-text-fill: #00000080;
-	-fx-alignment:center;
-}
-
-.tree_table_button {
-	-fx-background-radius: 40;
-	-fx-background-color: white;
-	-fx-font-weight: normal;
-	-fx-font-family: "Ebrima";
-    -fx-font-size: 12;
-    -fx-text-fill: #00000080;
-    -fx-border-width: 2;
-    -fx-border-radius: 40;
-	-fx-border-color: linear-gradient(to bottom left, #00A9CC, #020024);
-}
-
-.tree_table_button:hover {
-	-fx-background-color: #d8d8d8;
-	-fx-background-radius: 40;
-	-fx-font-weight: normal;
-	-fx-font-family: "Ebrima";
-    -fx-font-size: 12;
-    -fx-text-fill: #00000080;
-    -fx-border-width: 2;
     -fx-border-radius: 40;
 	-fx-border-color: linear-gradient(to bottom left, #00A9CC, #020024);
 }
