--- a/src/patientRecordsPane/PatientRecordsLayout.fxml
+++ b/src/patientRecordsPane/PatientRecordsLayout.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
@@ -76,18 +77,19 @@
 			</font>
 		</Label>
 		<Separator layoutX="44.0" layoutY="204.0" prefHeight="0.0" prefWidth="878.0" />
-		<Label alignment="CENTER" layoutX="646.0" layoutY="83.0" prefHeight="23.0" prefWidth="255.0" styleClass="label_text_bold" text="Select a day" textFill="#0000007e" />
-		<DatePicker fx:id="datePicker" editable="false" layoutX="659.0" layoutY="147.0" prefHeight="32.0" prefWidth="229.0" promptText="Select a day" styleClass="date-chooser" />
+		<Label alignment="CENTER" layoutX="646.0" layoutY="55.0" prefHeight="23.0" prefWidth="255.0" styleClass="label_text_bold" text="Select a day" textFill="#0000007e" />
+		<DatePicker fx:id="datePicker" editable="false" layoutX="659.0" layoutY="116.0" prefHeight="32.0" prefWidth="229.0" promptText="Select a day" styleClass="date-chooser" />
 		<StackPane fx:id="chartPane" alignment="CENTER" layoutX="33.0" layoutY="224.0" prefHeight="420.0" prefWidth="900.0">
          <children>
             <Rectangle fx:id="selectRect" fill="DODGERBLUE" height="0.0" mouseTransparent="true" opacity="0.3" stroke="#002966" strokeType="INSIDE" strokeWidth="3.0" width="0.0" x="0.0" y="0.0" StackPane.alignment="TOP_LEFT" />
          </children>
 		</StackPane>
       <JFXButton fx:id="changeGraph" layoutX="382.0" layoutY="668.0" onMouseClicked="#changeChart" prefHeight="34.0" prefWidth="202.0" styleClass="change_graph_button" text="Button text" />
-      <Label alignment="CENTER" layoutX="646.0" layoutY="111.0" prefHeight="23.0" prefWidth="255.0" styleClass="label_text" text="To display the patient's records" textFill="#0000007e">
+      <Label alignment="CENTER" layoutX="646.0" layoutY="78.0" prefHeight="23.0" prefWidth="255.0" styleClass="label_text" text="To display the patient's records" textFill="#0000007e">
          <font>
             <Font size="16.0" />
          </font>
       </Label>
+      <JFXComboBox fx:id="timeSelection" layoutX="659.0" layoutY="159.0" prefHeight="25.0" prefWidth="229.0" promptText="Select recording time" />
 	</children>
 </Pane>
