--- a/src/patientRecordsPane/PatientRecordsLayout.fxml
+++ b/src/patientRecordsPane/PatientRecordsLayout.fxml
@@ -77,7 +77,7 @@
 			</font>
 		</Label>
 		<Separator layoutX="44.0" layoutY="204.0" prefHeight="0.0" prefWidth="878.0" />
-		<Label alignment="CENTER" layoutX="646.0" layoutY="55.0" prefHeight="23.0" prefWidth="255.0" styleClass="label_text_bold" text="Select a day" textFill="#0000007e" />
+		<Label alignment="CENTER" layoutX="646.0" layoutY="55.0" prefHeight="23.0" prefWidth="255.0" styleClass="label_text_bold" text="Select a time interval" textFill="#0000007e" />
 		<DatePicker fx:id="datePicker" editable="false" layoutX="659.0" layoutY="116.0" prefHeight="32.0" prefWidth="229.0" promptText="Select a day" styleClass="date-chooser" />
 		<StackPane fx:id="chartPane" alignment="CENTER" layoutX="33.0" layoutY="224.0" prefHeight="420.0" prefWidth="900.0">
          <children>
@@ -85,11 +85,11 @@
          </children>
 		</StackPane>
       <JFXButton fx:id="changeGraph" layoutX="382.0" layoutY="668.0" onMouseClicked="#changeChart" prefHeight="34.0" prefWidth="202.0" styleClass="change_graph_button" text="Button text" />
-      <Label alignment="CENTER" layoutX="646.0" layoutY="78.0" prefHeight="23.0" prefWidth="255.0" styleClass="label_text" text="To display the patient's records" textFill="#0000007e">
+      <Label alignment="CENTER" layoutX="646.0" layoutY="78.0" prefHeight="23.0" prefWidth="255.0" styleClass="label_text" text="To display patient's records" textFill="#0000007e">
          <font>
             <Font size="16.0" />
          </font>
       </Label>
-      <JFXComboBox fx:id="timeSelection" layoutX="659.0" layoutY="159.0" prefHeight="25.0" prefWidth="229.0" promptText="Select recording time" />
+      <JFXComboBox fx:id="timeSelection" focusColor="#0193bb" layoutX="664.0" layoutY="157.0" prefHeight="30.0" prefWidth="220.0" promptText="Select recording time" styleClass="comboBox" unFocusColor="#4d4d4d80" />
 	</children>
 </Pane>
