--- a/src/patientRecordsPane/PatientRecordsLayout.fxml
+++ b/src/patientRecordsPane/PatientRecordsLayout.fxml
@@ -66,12 +66,12 @@
 				<Font name="Ebrima Bold" size="18.0" />
 			</font>
 		</Label>
-		<Label layoutX="365.0" layoutY="119.0" styleClass="label_text" text="Patient Weight: weight Kg" textFill="#00000080">
+		<Label fx:id="patientWeight" layoutX="365.0" layoutY="119.0" styleClass="label_text" text="Patient Weight: weight Kg" textFill="#00000080">
 			<font>
 				<Font name="Ebrima" size="16.0" />
 			</font>
 		</Label>
-		<Label layoutX="365.0" layoutY="159.0" styleClass="label_text" text="Patient Height: height cm" textFill="#00000080">
+		<Label fx:id="patientHeight" layoutX="365.0" layoutY="159.0" styleClass="label_text" text="Patient Height: height cm" textFill="#00000080">
 			<font>
 				<Font name="Ebrima" size="16.0" />
 			</font>
