--- a/src/patientAccountPane/PatientAccountLayout.fxml
+++ b/src/patientAccountPane/PatientAccountLayout.fxml
@@ -32,81 +32,82 @@
             <Image url="@../icons/patient_black.png" />
          </image>
       </ImageView>
-      <Label fx:id="userNameLabel" layoutX="496.0" layoutY="316.0" prefHeight="27.0" prefWidth="165.0" styleClass="label_text2" text="Name: not found" textFill="#00000080">
+      <Label fx:id="userNameLabel" layoutX="445.0" layoutY="360.0" prefHeight="27.0" prefWidth="165.0" styleClass="label_text2" text="Name: not found" textFill="#00000080">
          <font>
             <Font name="Ebrima" size="18.0" />
          </font>
       </Label>
-      <Label fx:id="userIDLabel" layoutX="496.0" layoutY="353.0" styleClass="label_text2" text="Patient ID: not found" textFill="#00000080">
+      <Label fx:id="userIDLabel" layoutX="445.0" layoutY="400.0" styleClass="label_text2" text="Patient ID: not found" textFill="#00000080">
          <font>
             <Font name="Ebrima" size="18.0" />
          </font>
       </Label>
-      <Label fx:id="userEmailLabel" layoutX="494.0" layoutY="390.0" styleClass="label_text2" text="Email: not found" textFill="#00000080">
+      <Label fx:id="userEmailLabel" layoutX="445.0" layoutY="440.0" styleClass="label_text2" text="Email: not found" textFill="#00000080">
          <font>
             <Font name="Ebrima" size="18.0" />
          </font>
       </Label>
-      <ImageView fitHeight="243.0" fitWidth="252.0" layoutX="570.0" layoutY="46.0" opacity="0.5" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="270.0" fitWidth="270.0" layoutX="526.0" layoutY="78.0" opacity="0.5" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../icons/patient_account.png" />
          </image>
       </ImageView>
-      <Separator layoutX="429.0" layoutY="88.0" orientation="VERTICAL" prefHeight="600.0" prefWidth="0.0" />
-      <JFXTextField fx:id="userEmailField" focusColor="#0193bb" labelFloat="true" layoutX="97.0" layoutY="158.0" prefHeight="35.0" prefWidth="240.0" promptText="User's email" styleClass="text-field" stylesheets="@../userRegistration/RegistrationStyle.css" unFocusColor="#00000080">
+      <Separator layoutX="370.0" layoutY="78.0" orientation="VERTICAL" prefHeight="607.0" prefWidth="7.0" />
+      <JFXTextField fx:id="userEmailField" focusColor="#0193bb" labelFloat="true" layoutX="85.0" layoutY="178.0" prefHeight="35.0" prefWidth="240.0" promptText="User's email" styleClass="text-field" stylesheets="@../userRegistration/RegistrationStyle.css" unFocusColor="#00000080">
          <font>
             <Font name="Ebrima" size="14.0" />
          </font>
       </JFXTextField>
-      <JFXTextField fx:id="userNameField" focusColor="#0193bb" labelFloat="true" layoutX="96.0" layoutY="282.0" prefHeight="35.0" prefWidth="240.0" promptText="User's name" styleClass="text-field" stylesheets="@../userRegistration/RegistrationStyle.css" unFocusColor="#00000080">
+      <JFXTextField fx:id="userNameField" focusColor="#0193bb" labelFloat="true" layoutX="84.0" layoutY="308.0" prefHeight="35.0" prefWidth="240.0" promptText="User's name" styleClass="text-field" stylesheets="@../userRegistration/RegistrationStyle.css" unFocusColor="#00000080">
          <font>
             <Font name="Ebrima" size="14.0" />
          </font>
       </JFXTextField>
-      <Label layoutX="87.0" layoutY="103.0" styleClass="label_text2" text="User's account update" textFill="#0000007e">
+      <Label layoutX="85.0" layoutY="125.0" styleClass="label_text2" text="User's account update" textFill="#0000007e">
          <font>
             <Font name="Ebrima" size="18.0" />
          </font>
       </Label>
-      <Label layoutX="576.0" layoutY="458.0" styleClass="label_text2" text="Change password" textFill="#0000007e">
+      <Label layoutX="82.0" layoutY="440.0" styleClass="label_text2" text="Change password" textFill="#0000007e">
          <font>
             <Font name="Ebrima" size="18.0" />
          </font>
       </Label>
-      <JFXButton fx:id="updateName" layoutX="97.0" layoutY="344.0" prefWidth="220.0" styleClass="change_button" text="Update Name" />
-      <JFXButton layoutX="585.0" layoutY="618.0" onMouseClicked="#changePassword" prefWidth="220.0" styleClass="change_button" text="Change password" />
-      <JFXPasswordField fx:id="userNewPassword" focusColor="#0193bb" labelFloat="true" layoutX="580.0" layoutY="508.0" prefHeight="35.0" prefWidth="240.0" promptText="New password" unFocusColor="#00000080">
+      <JFXButton fx:id="updateName" layoutX="92.0" layoutY="378.0" prefWidth="220.0" styleClass="change_button" text="Update Name" />
+      <JFXButton layoutX="92.0" layoutY="634.0" onMouseClicked="#changePassword" prefWidth="220.0" styleClass="change_button" text="Change password" />
+      <JFXPasswordField fx:id="userNewPassword" focusColor="#0193bb" labelFloat="true" layoutX="82.0" layoutY="490.0" prefHeight="35.0" prefWidth="240.0" promptText="New password" unFocusColor="#00000080">
          <font>
             <Font name="Ebrima" size="14.0" />
          </font>
       </JFXPasswordField>
-      <JFXPasswordField fx:id="userOldPassword" focusColor="#0193bb" labelFloat="true" layoutX="580.0" layoutY="558.0" prefHeight="35.0" prefWidth="240.0" promptText="Old password" unFocusColor="#00000080">
+      <JFXPasswordField fx:id="userOldPassword" focusColor="#0193bb" labelFloat="true" layoutX="84.0" layoutY="565.0" prefHeight="35.0" prefWidth="240.0" promptText="Old password" unFocusColor="#00000080">
          <font>
             <Font name="Ebrima" size="14.0" />
          </font>
       </JFXPasswordField>
-      <JFXButton fx:id="updateEmail" layoutX="92.0" layoutY="212.0" prefWidth="220.0" styleClass="change_button" text="Update Email" />
-      <JFXTextField fx:id="userWeightField" focusColor="#0193bb" labelFloat="true" layoutX="95.0" layoutY="409.0" prefHeight="35.0" prefWidth="240.0" promptText="Weight" styleClass="text-field" stylesheets="@../userRegistration/RegistrationStyle.css" unFocusColor="#00000080">
+      <JFXButton fx:id="updateEmail" layoutX="92.0" layoutY="248.0" prefWidth="220.0" styleClass="change_button" text="Update Email" />
+      <JFXTextField fx:id="userWeightField" focusColor="#0193bb" labelFloat="true" layoutX="690.0" layoutY="565.0" prefHeight="35.0" prefWidth="240.0" promptText="Update weight [Kg]" styleClass="text-field" stylesheets="@../userRegistration/RegistrationStyle.css" unFocusColor="#00000080">
          <font>
             <Font name="Ebrima" size="14.0" />
          </font>
       </JFXTextField>
-      <JFXButton fx:id="updateWeight" layoutX="96.0" layoutY="463.0" prefWidth="220.0" styleClass="change_button" text="Update Weight" />
-      <Label fx:id="userWeightLabel" layoutX="738.0" layoutY="316.0" styleClass="label_text2" text="Weight: not found" textFill="#00000080">
+      <JFXButton fx:id="updateWeight" layoutX="699.0" layoutY="634.0" prefWidth="220.0" styleClass="change_button" text="Update Weight" />
+      <Label fx:id="userWeightLabel" layoutX="735.0" layoutY="400.0" styleClass="label_text2" text="Weight: not found" textFill="#00000080">
          <font>
             <Font name="Ebrima" size="18.0" />
          </font>
       </Label>
-      <Label fx:id="userHeightLabel" layoutX="739.0" layoutY="350.0" prefHeight="27.0" prefWidth="220.0" styleClass="label_text2" text="Height: not found" textFill="#00000080">
+      <Label fx:id="userHeightLabel" layoutX="735.0" layoutY="440.0" prefHeight="27.0" prefWidth="145.0" styleClass="label_text2" text="Height: not found" textFill="#00000080">
          <font>
             <Font name="Ebrima" size="18.0" />
          </font>
       </Label>
-      <JFXTextField fx:id="userHeightField" focusColor="#0193bb" labelFloat="true" layoutX="97.0" layoutY="531.0" prefHeight="35.0" prefWidth="240.0" promptText="Height" styleClass="text-field" stylesheets="@../userRegistration/RegistrationStyle.css" unFocusColor="#00000080">
+      <JFXTextField fx:id="userHeightField" focusColor="#0193bb" labelFloat="true" layoutX="420.0" layoutY="565.0" prefHeight="35.0" prefWidth="240.0" promptText="Update height [cm]" styleClass="text-field" stylesheets="@../userRegistration/RegistrationStyle.css" unFocusColor="#00000080">
          <font>
             <Font name="Ebrima" size="14.0" />
          </font>
       </JFXTextField>
-      <JFXButton fx:id="updateHeight" layoutX="98.0" layoutY="585.0" prefWidth="220.0" styleClass="change_button" text="Update Height" />
+      <JFXButton fx:id="updateHeight" layoutX="430.0" layoutY="634.0" prefWidth="220.0" styleClass="change_button" text="Update Height" />
+      <Separator layoutX="400.0" layoutY="525.0" prefHeight="4.0" prefWidth="521.0" />
    </children>
 </Pane>
