--- a/src/parametersRecordPane/ParametersRecordStyle.css
+++ b/src/parametersRecordPane/ParametersRecordStyle.css
@@ -61,3 +61,40 @@
     -fx-border-radius: 40;
 	-fx-border-color: linear-gradient(to bottom left, #00A9CC, #020024);
 }
+.tree_view {
+	-fx-border-color: white;
+	-fx-border-width: 2;
+	-fx-background-color: white;
+    -fx-font-size: 14;
+    -fx-text-fill: #00000080;
+    -fx-border-radius: 20;
+}
+
+.tree_view .table-column {
+	-fx-text-fill: #00000080;
+	-fx-alignment:center;
+}
+
+.tree_table_button {
+	-fx-background-radius: 40;
+	-fx-background-color: white;
+	-fx-font-weight: normal;
+	-fx-font-family: "Ebrima";
+    -fx-font-size: 12;
+    -fx-text-fill: #00000080;
+    -fx-border-width: 2;
+    -fx-border-radius: 40;
+	-fx-border-color: linear-gradient(to bottom left, #00A9CC, #020024);
+}
+
+.tree_table_button:hover {
+	-fx-background-color: #d8d8d8;
+	-fx-background-radius: 40;
+	-fx-font-weight: normal;
+	-fx-font-family: "Ebrima";
+    -fx-font-size: 12;
+    -fx-text-fill: #00000080;
+    -fx-border-width: 2;
+    -fx-border-radius: 40;
+	-fx-border-color: linear-gradient(to bottom left, #00A9CC, #020024);
+}
