update for bitalino

--- a/src/parametersRecordPane/ParametersRecordLayout.fxml
+++ b/src/parametersRecordPane/ParametersRecordLayout.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<Pane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="965.0" styleClass="white_color" stylesheets="@ParametersRecordStyle.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="parametersRecordPane.ParametersRecordController">
+<Pane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="965.0" styleClass="white_color" stylesheets="@ParametersRecordStyle.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="parametersRecordPane.ParametersRecordController">
    <children>
       <Label layoutX="106.0" layoutY="25.0" prefHeight="32.0" prefWidth="213.0" text="Parameters Record" textFill="#00000080">
          <font>
@@ -33,23 +33,23 @@
             <Image url="@../icons/heartRate_black.png" />
          </image>
       </ImageView>
-      <Label alignment="CENTER" layoutX="33.0" layoutY="445.0" prefHeight="25.0" prefWidth="321.0" text="Everything ready to record data" textAlignment="CENTER" textFill="#00000067" wrapText="true">
+      <Label alignment="CENTER" layoutX="33.0" layoutY="493.0" prefHeight="25.0" prefWidth="321.0" text="Everything ready to record data" textAlignment="CENTER" textFill="#00000067" wrapText="true">
          <font>
             <Font name="Ebrima" size="18.0" />
          </font>
       </Label>
       <AnchorPane layoutX="145.0" layoutY="506.0" />
-      <JFXButton fx:id="startRecording" layoutX="92.0" layoutY="578.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#startStopRecording" prefHeight="40.0" prefWidth="204.0" styleClass="add_button" text="START RECORDING!">
+      <JFXButton fx:id="startRecording" layoutX="92.0" layoutY="627.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#startStopRecording" prefHeight="40.0" prefWidth="204.0" styleClass="add_button" text="Start Recording">
          <font>
             <Font size="16.0" />
          </font>
       </JFXButton>
-      <Label alignment="CENTER" layoutX="566.0" layoutY="675.0" prefHeight="25.0" prefWidth="321.0" text="Last recorded values (timewise)" textAlignment="CENTER" textFill="#00000067" wrapText="true">
+      <Label alignment="CENTER" layoutX="506.0" layoutY="669.0" prefHeight="25.0" prefWidth="321.0" text="Last recorded values (timewise)" textAlignment="CENTER" textFill="#00000067" wrapText="true">
          <font>
             <Font name="Ebrima" size="18.0" />
          </font>
       </Label>
-      <JFXTreeTableView fx:id="pastValuesTreeView" layoutX="455.0" layoutY="445.0" prefHeight="230.0" prefWidth="503.0" styleClass="tree_view">
+      <JFXTreeTableView fx:id="pastValuesTreeView" layoutX="381.0" layoutY="459.0" prefHeight="210.0" prefWidth="570.0" styleClass="tree_view">
          <columnResizePolicy>
             <TreeTableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
@@ -59,17 +59,17 @@
             <Label fx:id="nothingtoshow" text="Nothing to show, please click on Start Recording!" textAlignment="CENTER" />
          </children>
       </StackPane>
-      <JFXButton fx:id="changegraph" layoutX="381.0" layoutY="380.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#changeChart" prefHeight="40.0" prefWidth="204.0" styleClass="add_button" text="SHOW EMG GRAPH">
+      <JFXButton fx:id="changegraph" layoutX="381.0" layoutY="405.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#changeChart" prefHeight="40.0" prefWidth="204.0" styleClass="add_button" text="Show EMG Graph">
          <font>
             <Font size="16.0" />
          </font>
       </JFXButton>
-      <Label alignment="CENTER" layoutX="33.0" layoutY="479.0" prefHeight="25.0" prefWidth="321.0" text="Connected to BITalino with MAC:" textAlignment="CENTER" textFill="#00000067" wrapText="true">
+      <Label alignment="CENTER" layoutX="33.0" layoutY="527.0" prefHeight="25.0" prefWidth="321.0" text="Connected to BITalino with MAC:" textAlignment="CENTER" textFill="#00000067" wrapText="true">
          <font>
             <Font name="Ebrima" size="18.0" />
          </font>
       </Label>
-      <Label fx:id="macLabel" alignment="CENTER" layoutX="33.0" layoutY="516.0" prefHeight="25.0" prefWidth="321.0" text="00:00:00:00:00:00 " textAlignment="CENTER" textFill="#00000067" wrapText="true">
+      <Label fx:id="macLabel" alignment="CENTER" layoutX="33.0" layoutY="564.0" prefHeight="25.0" prefWidth="321.0" text="00:00:00:00:00:00 " textAlignment="CENTER" textFill="#00000067" wrapText="true">
          <font>
             <Font name="Ebrima" size="18.0" />
          </font>
