--- a/src/main/resources/common/view/DialogPopUpLayout.fxml
+++ b/src/main/resources/common/view/DialogPopUpLayout.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane prefHeight="130.0" prefWidth="300.0" styleClass="pop_up_blue_color" stylesheets="@../../css/mainStyle.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.common.controllers.DialogPopUpController">
+<Pane prefHeight="130.0" prefWidth="300.0" styleClass="pop_up_blue_color" stylesheets="@../../css/mainStyle.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="common.controllers.DialogPopUpController">
    <children>
       <Pane layoutX="5.0" layoutY="5.0" prefHeight="120.0" prefWidth="290.0" styleClass="pop_up_white_color">
          <children>
