--- a/src/main/resources/doctor/view/AddPatientsLayout.fxml
+++ b/src/main/resources/doctor/view/AddPatientsLayout.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<AnchorPane fx:id="anchorPane" styleClass="blue_color" stylesheets="@../../css/mainStyle.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.doctor.controllers.AddPatientController">
+<AnchorPane fx:id="anchorPane" styleClass="blue_color" stylesheets="@../../css/mainStyle.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="doctor.controllers.AddPatientController">
    <children>
       <Pane prefHeight="600.0" prefWidth="500.0" styleClass="blue_color" />
       <Pane layoutX="5.0" layoutY="5.0" prefHeight="590.0" prefWidth="490.0" styleClass="white_color">
